# goodmemory_bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: linter-check.yml  tests.yml
backend/: .coveragerc  Dockerfile  conftest.py  pyproject.toml  pytest.ini  start.sh
backend/apps/: apps.py  models.py  validators.py
backend/apps/admin/: __init__.py  memory.py  photo.py  user.py
backend/apps/migrations/: 0001_initial.py  0002_alter_user_telegram_id_photo_delete_memory.py  0003_alter_photo_photo.py
backend/apps/services/: prepare_date.py  service_for_date.py
backend/apps/tests/: conftest.py  test_photo_model.py  test_user_model.py  test_validators.py
backend/config/: urls.py
backend/config/settings/: base.py  local.py
backend/memories/: admin.py  models.py  tests.py
backend/memories/migrations/: 0001_initial.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_options.py
