[tool.poetry]
name = "goodmemory-bot"
version = "0.1.0"
description = ""
authors = ["Aleksandr Smelik <suntrope55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["assignment", "call-arg", "return", "type-arg", "var-annotated", "arg-type"]
exclude = ["venv", ".venv", "manage.py"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true


[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "R",  # Refactor
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]

ignore = [
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
